Config: add hwclock and dmesg to image

--- a/config
+++ b/config
@@ -1269,7 +1269,7 @@ CONFIG_PACKAGE_libatomic=m
 CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_libgcc=y
 CONFIG_PACKAGE_libpthread=y
-CONFIG_PACKAGE_librt=m
+CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libstdcpp=m
 CONFIG_PACKAGE_libthread-db=m
 CONFIG_PACKAGE_mtd=y
@@ -2367,12 +2367,12 @@ CONFIG_PACKAGE_wipefs=m
 CONFIG_PACKAGE_comgt=m
 CONFIG_PACKAGE_comgt-directip=m
 CONFIG_PACKAGE_comgt-ncm=m
-CONFIG_PACKAGE_dmesg=m
+CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_dropbearconvert=m
 CONFIG_PACKAGE_fconfig=m
 CONFIG_PACKAGE_flock=m
 CONFIG_PACKAGE_getopt=m
-CONFIG_PACKAGE_hwclock=m
+CONFIG_PACKAGE_hwclock=y
 CONFIG_PACKAGE_iconv=m
 CONFIG_PACKAGE_iwcap=m
 CONFIG_PACKAGE_iwinfo=y
