--- a/config
+++ b/config
@@ -232,7 +232,7 @@ CONFIG_KERNEL_PRINTK_TIME=y
 # Package build options
 #
 # CONFIG_DEBUG is not set
-CONFIG_IPV6=y
+# CONFIG_IPV6 is not set
 CONFIG_PKG_BUILD_PARALLEL=y
 CONFIG_PKG_BUILD_USE_JOBSERVER=y
 
@@ -1253,7 +1253,6 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_IPC_SYSLOG_BUFFER_SIZE=0
 CONFIG_BUSYBOX_DEFAULT_LOGGER=y
 CONFIG_PACKAGE_ca-certificates=m
 CONFIG_PACKAGE_dnsmasq=y
-# CONFIG_PACKAGE_dnsmasq-dhcpv6 is not set
 # CONFIG_PACKAGE_dnsmasq-full is not set
 CONFIG_PACKAGE_dropbear=y
 
@@ -2076,9 +2075,6 @@ CONFIG_PACKAGE_arptables=m
 CONFIG_PACKAGE_conntrack-tools=m
 CONFIG_PACKAGE_ebtables=m
 CONFIG_PACKAGE_ebtables-utils=m
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=m
-CONFIG_PACKAGE_ip6tables-mod-nat=m
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_iptables-mod-account=m
 CONFIG_PACKAGE_iptables-mod-chaos=m
@@ -2273,11 +2269,8 @@ CONFIG_PACKAGE_ipset-dns=m
 CONFIG_PACKAGE_iputils-arping=y
 CONFIG_PACKAGE_iputils-clockdiff=m
 CONFIG_PACKAGE_iputils-ping=y
-CONFIG_PACKAGE_iputils-ping6=m
 CONFIG_PACKAGE_iputils-tftpd=m
 CONFIG_PACKAGE_iputils-tracepath=m
-CONFIG_PACKAGE_iputils-tracepath6=m
-CONFIG_PACKAGE_iputils-traceroute6=m
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_map=m
 CONFIG_PACKAGE_mdns=m
